Document sub form of make()

--- a/Type/Match.pod
+++ b/Type/Match.pod
@@ -77,11 +77,18 @@ Returns the part of the original string following the match.
 =head2 method make
 
     method make(Match:D: Mu $ast)
+    sub make(Mu $ast)
 
 Sets the AST to C<$ast>, and returns it.
 
 This is just a little sugar for C<$/.made = $ast> which is a very common
 operation in actions. C<$ast> may be anything that makes sense for the
 use case. It's typically some tree node.
+
+The sub form operates on the current C<$/>, which can be a convenient shortcut:
+
+    method my-action ($/) {
+        make "foo: $/";
+    }
 
 =end pod
