Mention unspaces in default ws

--- a/Language/grammars.pod
+++ b/Language/grammars.pod
@@ -104,7 +104,7 @@ Is the same as:
     token entry { <key> <.ws> ’=’ <.ws> <value> <.ws> } # . = non-capturing
 
 The default C<ws> matches "whitespace", such a sequence of spaces (of whatever
-type), newlines, or heredocs.
+type), newlines, unspaces, or heredocs.
 
 It's perfectly fine to provide your own C<ws> token:
 
