Mention regex TOP too psch++

--- a/Language/grammars.pod
+++ b/Language/grammars.pod
@@ -90,7 +90,7 @@ that if you're parsing with L<C<.parse>|/type/Grammar#method_parse> method,
 C<token TOP> is automatically anchored to the start and end of the string
 (see also: L<C<.subparse>|/type/Grammar#method_subparse>).
 
-Using C<rule TOP> is also acceptable.
+Using C<rule TOP> or C<regex TOP> are also acceptable.
 
 =head3 C<ws>
 
