Remove explicit anchors, since we are calling .parse in the example

--- a/Language/grammars.pod
+++ b/Language/grammars.pod
@@ -136,7 +136,7 @@ Here is a contrived example of a grammar and actions in action:
 use v6;
 
 grammar TestGrammar {
-    token TOP { ^ \d+ $ }
+    token TOP { \d+ }
 }
 
 class TestActions {
