--- a/Type/Range.pod
+++ b/Type/Range.pod
@@ -100,6 +100,31 @@ method returns a list with the first and last value it will iterate over
 (taking into account L<excludes-min> and L<excludes-max>).  Returns a
 Failure if it is not an integer range.
 
+
+=head2 method minmax
+
+Defined as:
+
+    multi method minmax(Range:D:) returns List:D
+
+If the C<Range> is an integer range (as indicated by L<is-int>), then this
+method returns a list with the first and last value it will iterate over
+(taking into account L<excludes-min> and L<excludes-max>). If the range is
+not an integer range, the method will return a two element list containing
+the start and end point of the range unless either of L<excludes-min> or
+L<excludes-max> are C<True> in which case a L<Failure|/type/Failure> is returned.
+
+    my $r1 = (1..5); my $r2 = (1^..5);
+    say $r1.is-int, ', ', $r2.is-int;                 # True, True
+    say $r1.excludes-min, ', ', $r2.excludes-min;     # False, True
+    say $r1.minmax, ', ', $r2.minmax;                 # (1 5), (2 5)
+
+    my $r3 = (1.1..5.2); my $r4 = (1.1..^5.2);
+    say $r3.is-int, ', ', $r4.is-int;                 # False, False
+    say $r3.excludes-max, ', ', $r4.excludes-max;     # False, True
+    say $r3.minmax;                                   # (1.1 5.2)
+    say $r4.minmax;                                   # Failure
+
 =head2 method elems
 
     method elems(Range:D:) returns Numeric:D
