Added docs for Thread.name

--- a/Type/Thread.pod
+++ b/Type/Thread.pod
@@ -83,4 +83,20 @@ Tells the scheduler to prefer another thread for now.
 
     Thread.yield;
 
+=head2 method name
+
+Defined as:
+
+    method name(Thread:D:) returns Str:D
+
+Returns the user defined string, which can optionally be set during object
+creation in order to identify the C<Thread>, or '<anon>' if no such string
+was specified.
+
+    my $t1 = Thread.new(code => { for 1..5 -> $v { say $v }});
+    my $t2 = Thread.new(code => { for 1..5 -> $v { say $v }}, name => 'my thread');
+
+    say $t1.name;                 # <anon>
+    say $t2.name;                 # my thread
+
 =end pod
