Improve Netflix portion of the analogy

--- a/Language/concurrency.pod
+++ b/Language/concurrency.pod
@@ -231,10 +231,11 @@ placed with C<emit>.
 
 The L<Supply> can either be C<live> or C<on-demand>. A C<live> supply is like
 a TV broadcast: those who tune in don't get previously emitted values. An
-C<on-demand> broadcast is like Netflix: everyone who starts streaming a movie,
-always starts it from the beginning, regardless of how many people are
-watching it right now. Note that no history is kept for C<on-demand> supplies,
-instead, the C<supply> block is run for each tap of the supply.
+C<on-demand> broadcast is like Netflix: everyone who
+starts streaming a movie (taps a supply), always starts it from the beginning
+(gets all the values), regardless of how many people are watching it right now.
+Note that no history is kept for C<on-demand> supplies, instead, the C<supply>
+block is run for each tap of the supply.
 
 A C<live> L<Supply>
 is created by the L<Supplier> factory, each emitted value is passed to
