doc :$.attr shortcut in constructor calls

--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -16,6 +16,22 @@ TODO
 
 TODO
 
+=head3 Methods
+
+=head4 Forward Attributes in Constructors
+
+Often one class will instanciate another class while sharing attribute names.
+There is a shortcut for calling named parameter aliases in this case. Instead
+of writing C<:attr($.attr)> use C<:$.attr>.
+
+    class A { has $.i = 42 };
+    class B { 
+        has $.i = "answer";
+        method m() { A.new(:$.i) }
+    };
+    my $a = B.new.m;
+    say $a.i; # OUTPUT«answer␤»
+
 =head4 trait C<is nodal>
 
 TODO
