Added docs for Thread.app_lifetime. moritz++ jnthn++ zoffix++

--- a/Type/Thread.pod
+++ b/Type/Thread.pod
@@ -83,6 +83,21 @@ Tells the scheduler to prefer another thread for now.
 
     Thread.yield;
 
+=head2 method app_lifetime
+
+    method app_lifetime(Thread:D:) returns Bool:D
+
+Returns C<False> unless the named parameter C<:app_lifetime> is specifically set
+to C<True> during object creation. If the method returns C<False> it means that the
+the process will only terminate when the thread has finished while C<True> means that
+the thread will be killed when the main thread of the process terminates.
+
+    my $t1 = Thread.new(code => { for 1..5 -> $v { say $v }});
+    my $t2 = Thread.new(code => { for 1..5 -> $v { say $v }}, :app_lifetime);
+
+    say $t1.app_lifetime;                 # False
+    say $t2.app_lifetime;                 # True
+
 =head2 method name
 
 Defined as:
