Added docs for Thread.join

--- a/Type/Thread.pod
+++ b/Type/Thread.pod
@@ -72,8 +72,14 @@ Returns a numeric, unique thread identifier.
 
     method finish(Thread:D)
 
-Waits for the thread to finish. This is called I<join> in other programming
+Waits for the thread to finish. This is called L<join|#method_join> in other programming
 systems.
+
+=head2 method join
+
+    method join(Thread:D)
+
+Waits for the thread to finish.
 
 =head2 method yield
 
@@ -99,8 +105,6 @@ the thread will be killed when the main thread of the process terminates.
     say $t2.app_lifetime;                 # True
 
 =head2 method name
-
-Defined as:
 
     method name(Thread:D:) returns Str:D
 
