--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -18,19 +18,23 @@ TODO
 
 =head3 Methods
 
-=head4 Forward Attributes in Constructors
+=head4 Setting Attributes with Namesake Variables and Methods
 
-Often one class will instanciate another class while sharing attribute names.
-There is a shortcut for calling named parameter aliases in this case. Instead
-of writing C<:attr($.attr)> use C<:$.attr>.
+Instead of writing C<< attr => $attr >> or C<:attr($attr)>, you can save some
+typing if the variable (or method call) you're setting the attribute with
+shares the name with the attribute:
 
     class A { has $.i = 42 };
-    class B { 
+    class B {
         has $.i = "answer";
         method m() { A.new(:$.i) }
     };
     my $a = B.new.m;
     say $a.i; # OUTPUT«answer␤»
+
+Since C<$.i> method call is named C<i> and the attribute is named C<i>, Perl 6
+lets us shortcut. The same applies to C<:$var>, C<:$!private-attribute>,
+C<:&attr-with-code-in-it>, and so on.
 
 =head4 trait C<is nodal>
 
@@ -60,11 +64,11 @@ provided. In the latter case existing methods, both in the class itself and
 it's inheritance chain, will take precedence. If even local C<FALLBACK>s should
 be searched use a C<HyperWhatever>.
 
-    class A { 
+    class A {
         method m1(){}
         method m2(){}
     }
-    
+
     class C {
         has $.delegate handles <m1 m2> = A.new()
     }
@@ -91,7 +95,7 @@ If no C<is> trait is provided the default of L<C<Any>|/type/Any)> will be used
 as a parent class. This forces all Perl 6 objects to have the same set of basic
 methods to provide an interface for introspection and coercion to basic types.
 
-    class A { 
+    class A {
         multi method from-a(){ 'A::from-a' }
     }
     dd A.new.^parents(:all);
