doc automatic signatures for @_ and %_

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -101,6 +101,16 @@ sub formatB<(Str $s)> { ... }
 Details about the syntax and use of signatures can be found in the
 L<documentation on the C<Signature> class|Signature>.
 
+=head3 Automatic Signatures
+
+X<|@_>X<|%_>
+If no signature is provided but either of the two automatic variables C<@_> or
+C<%_> are used in the function body, a signature with C<*@_> or C<*%_> will be
+generated. Both automatic variables can be used that the same time.
+
+    sub s { dd @_, %_ };
+    dd &s.signature # OUTPUT«:(*@_, *%_)␤»
+
 =comment capture, destructuring,
 
 =head2 Arguments
