doc reserved method names

--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -18,6 +18,18 @@ TODO
 
 =head3 Methods
 
+=head4 Reserved Method Names
+
+Some build in introspection methods are actually special syntax provided by the
+compiler, namely C<WHAT> and C<VAR>. Declaring methods with those names will
+silently fail.
+
+    class A {
+        method WHAT { "ain't gonna happen" }
+    };
+
+    say A.new.WHAT; # OUTPUT«(A)␤»
+
 =head4 Setting Attributes with Namesake Variables and Methods
 
 Instead of writing C<< attr => $attr >> or C<:attr($attr)>, you can save some
