--- a/Type/Range.pod
+++ b/Type/Range.pod
@@ -14,10 +14,10 @@ Ranges are constructed using one of the four possible range operators,
 which consist of two dots, and optionally a caret which indicates that
 the endpoint marked with it is excluded from the range.
 
-    1 .. 5
-    1^.. 5  # start point excluded
-    1 ..^5  # end point excluded
-    1^..^5  # start and end point excluded
+    1 .. 5  # 1 <= $x <= 5
+    1^.. 5  # 1 <  $x <= 5
+    1 ..^5  # 1 <= $x <  5
+    1^..^5  # 1 <  $x <  5
 
 The caret is also a prefix operator for constructing numeric ranges
 starting from zero:
@@ -34,6 +34,7 @@ than the end point, the range is considered empty.
     for 1..5 { .say }       # five iterations
     ('a' ^..^ 'f').list     # 'b', 'c', 'd', 'e'
     5 ~~ ^5;                # False
+    4.5 ~~ 0..^5			# True
     (1.1..5).list;          # (1.1, 2.1, 3.1, 4.1)
 
 Use the C<...> sequence operator to produce lists of elements that
