add .WHO, .HOW and a way to work around reserved method names

--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -21,14 +21,16 @@ TODO
 =head4 Reserved Method Names
 
 Some build in introspection methods are actually special syntax provided by the
-compiler, namely C<WHAT> and C<VAR>. Declaring methods with those names will
-silently fail.
+compiler, namely C<WHAT>, C<WHO>, C<HOW> and C<VAR>. Declaring methods with
+those names will silently fail. A dynamic call will work, what allows to call
+methods from foreign objects.
 
     class A {
         method WHAT { "ain't gonna happen" }
     };
 
     say A.new.WHAT; # OUTPUT«(A)␤»
+    say A.new."WHAT"() # OUTPUT«ain't gonna happen␤» 
 
 =head4 Setting Attributes with Namesake Variables and Methods
 
