add reserved method names to index

--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -20,6 +20,7 @@ TODO
 
 =head4 Reserved Method Names
 
+X<|WHAT (reserved method)>X<|WHO (reserved method)>X<|HOW (reserved method)>X<|VAR (reserved method)>
 Some build in introspection methods are actually special syntax provided by the
 compiler, namely C<WHAT>, C<WHO>, C<HOW> and C<VAR>. Declaring methods with
 those names will silently fail. A dynamic call will work, what allows to call
