reduction meta ops need another [] layer for sub refs

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -296,11 +296,12 @@ to destructure a List of Lists.
 =head1 Reduction Operators
 
 Reduction operators apply any infix operator, surrounded by C<[> and C<]>,
-element by element and return the resulting value.
+element by element and return the resulting value. To use a function reference
+provide an additional layer of C<[> and C<]>.
 
     say [+] 1, 2, 3; # 6
     sub plus { $^a + $^b };
-    say [&plus] 1, 2, 3; # 6
+    say [[&plus]] 1, 2, 3; # 6
 
 They can be defined as a list prefix operators or will be generated automatically.
 
