doc infix form for subs

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -337,6 +337,14 @@ which applies a function to each input element:
     my @squared = map &square,  1..5;
     say join ', ', @squared;        # 1, 4, 9, 16, 25
 
+=head2 Infix Form
+
+To call a subroutine with 2 arguments like a infix operator, use a subroutine
+reference surrounded by C<[> and C<]>.
+
+    sub plus { $^a + $^b };
+    say 21 [&plus] 21;
+    OUTPUT«42␤»
 
 =head2 Closures
 
