Added docs for Thread.Str

--- a/Type/Thread.pod
+++ b/Type/Thread.pod
@@ -118,4 +118,14 @@ was specified.
     say $t1.name;                 # <anon>
     say $t2.name;                 # my thread
 
+=head2 method Str
+
+    method Str(Thread:D:) returns Str:D
+
+Returns a string which contains the invocants L<thread id|#method_id> and
+L<name|#method_name>.
+
+    my $t = Thread.new(code => { for 1..5 -> $v { say $v }}, name => 'calc thread');
+    say $t.Str;                           # Thread<3>(calc thread)
+
 =end pod
